--- a/SA2025_W1.ipynb
+++ b/SA2025_W1.ipynb
@@ -315,19 +315,19 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "230.0"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PWR\n",
+      "0.053763    pontiac grand prix\n",
+      "Name: name, dtype: object\n"
+     ]
     }
    ],
    "source": [
     "#your code here\n",
-    "df['horsepower'].max()"
+    "hp_max=df['horsepower'].max()\n",
+    "print(df[df['horsepower']==hp_max]['name'])"
    ]
   },
   {
@@ -529,7 +529,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\akank\\AppData\\Local\\Temp\\ipykernel_24224\\685544605.py:2: FutureWarning: \n",
+      "C:\\Users\\akank\\AppData\\Local\\Temp\\ipykernel_20392\\685544605.py:2: FutureWarning: \n",
       "\n",
       "The `ci` parameter is deprecated. Use `errorbar=None` for the same effect.\n",
       "\n",
@@ -565,7 +565,12 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "TyyKAFLGdHtx"
+    "editable": true,
+    "id": "TyyKAFLGdHtx",
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
    },
    "source": [
     "### Create a Seaborn scatterplot (or PairGrid) where:\n",
